fix: horizontal scroll issues in client pages

--- a/src/components/Client/Client.css
+++ b/src/components/Client/Client.css
@@ -8,8 +8,9 @@
   -moz-osx-font-smoothing: grayscale;
   background: #052533;
   width: 100%;
-  max-width: 100%;
+  max-width: 100vw;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .client__nav-container {
@@ -18,8 +19,9 @@
   background: rgba(5, 37, 51, 0.98);
   position: relative;
   width: 100%;
-  max-width: 100%;
+  max-width: 100vw;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .client__nav-container--loading::before {
@@ -40,8 +42,9 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-width: 100%;
+  max-width: 100vw;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .client__section {
@@ -52,8 +55,9 @@
   /* Reduce gaps between sections */
   margin: 0;
   width: 100%;
-  max-width: 100%;
+  max-width: 100vw;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 @media (min-width: 1024px) {
