--- a/src/components/Client/Overview/Overview.css
+++ b/src/components/Client/Overview/Overview.css
@@ -1,14 +1,15 @@
 .overview {
   position: relative;
   width: 100%;
-  max-width: 100%;
+  max-width: 100vw;
   box-sizing: border-box;
   padding-bottom: 0;
+  overflow-x: hidden;
 }
 
 .overview__header {
   width: 100%;
-  max-width: 100%;
+  max-width: 100vw;
   box-sizing: border-box;
   min-height: 500px;
   background-size: cover;
@@ -20,6 +21,7 @@
   padding: 6rem 2rem;
   margin: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .overview__logo {
@@ -109,6 +111,7 @@
   position: relative;
   z-index: 1;
   text-align: center;
+  overflow-x: hidden;
 }
 
 .overview__title {
@@ -130,8 +133,9 @@
 
 .overview__wrapper {
   width: 100%;
-  max-width: 100%;
+  max-width: 100vw;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 @media (max-width: 768px) {
